packages/js/product-editor/src/components/button-with-dropdown-menu/style.scss
.woocommerce-button-with-dropdown-menu {
	gap: 1px;

	&__main-button {
		border-top-right-radius: 0;
		border-bottom-right-radius: 0;
	}

	&__dropdown-button {
		border-top-left-radius: 0;
		border-bottom-left-radius: 0;

		&.is-opened svg {
			transform: rotate( 180deg );
		}
	}
}

